# harvest

./: .env.example  ARCHITECTURE.md  Cargo.toml  README.md  arch.md
src/: analyzer.rs  config.rs  crawler.rs  data_models.rs  db.rs  indexer.rs  lib.rs  main.rs  query_engine.rs  scrapper.rs
src/api/: handlers.rs  mod.rs  models.rs
static/: app.js  index.html  styles.css
tests/: analyzer.rs  indexer_tests.rs  query_engine_tests.rs
