[package]
name = "harvest"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4", features = ["derive"] }
anyhow = "1.0.100"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.48.0", features = ["full"] }
scraper = "0.24.0"
reqwest = { version = "0.12", features = ["json"] }
mongodb = "3.4.1"
chrono = "0.4.26"
dashmap = "6.1.0"
futures = "0.3"

dotenvy = "0.15.7"
lazy_static = "1.4.0"
once_cell = "1.21.3"
log = "0.4"
tracing = "0.1"
tracing-subscriber = "0.3"
tracing-log = "0.1"
html2text = "0.16.4"
stop-words = "0.9.0"
porter-stemmer = "0.1.2"
html5ever = "0.36.1"
markup5ever_rcdom = "0.36.0"
nanoid = "0.4.0"
